@@ -19,6 +19,8 @@
 
 	* avtterm.c (get_character): sleep a little while waiting
 
+	* lua/four_in_a_row.lua (speed_test): new function
+
 2013-06-16  Andreas K. Foerster  <info@akfoerster.de>
 
 	* lua/lua-avt.c (encodingname): accept SYSTEM
